# HPMSAll

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
modules/Extra/WalkmapConverter/: CMakeLists.txt
modules/Extra/WalkmapConverter/include/tools/: HPMSWalkmapConverter.h
modules/Extra/WalkmapConverter/src/: HPMSWalkmapConverterMain.cpp
modules/Extra/WalkmapConverter/src/tools/: HPMSWalkmapConverter.cpp
modules/HPMSApi/: CMakeLists.txt
modules/HPMSApi/include/api/: HPMSBackgroundImageAdapter.h  HPMSCameraAdapter.h  HPMSEntityAdapter.h  HPMSImageAdapter.h  HPMSInputUtils.h  HPMSOverlayImageAdapter.h  HPMSSceneNodeAdapter.h  HPMSSimulatorAdapter.h  HPMSSupplierAdapter.h  HPMSWalkmapAdapter.h
modules/HPMSApi/include/common/: HPMSMathUtils.h  HPMSObject.h  HPMSUtils.h
modules/HPMSApi/src/common/: HPMSMathUtils.cpp
modules/HPMSEngineImpl/: CMakeLists.txt
modules/HPMSEngineImpl/include/core/: HPMSAdapteeCommon.h  HPMSCameraAdaptee.h  HPMSEngineFacade.h  HPMSOgreContext.h  HPMSRenderToTexture.h  HPMSSupplierAdaptee.h
modules/HPMSEngineImpl/src/core/: HPMSEngineFacade.cpp  HPMSSupplierAdaptee.cpp
modules/HPMSRuntime/: CMakeLists.txt
modules/HPMSRuntime/include/facade/: HPMSApiFacade.h
modules/HPMSRuntime/include/logic/: HPMSController.h
modules/HPMSRuntime/include/logic/interaction/: HPMSCollisor.h
modules/HPMSRuntime/include/states/: HPMSLuaLogic.h
modules/HPMSRuntime/include/vm/: HPMSLuaExtensions.h  HPMSLuaRegister.h  HPMSLuaVM.h  LuaExtensions.h
modules/HPMSRuntime/resources/fonts/: Alagard.fontdef  BlueHighway.fontdef  Typewriter.fontdef
modules/HPMSRuntime/resources/models/: Cube.material  Cube.mesh  DepthCube.mesh  DummyAnim.material  DummySword.material  DummySword.mesh
modules/HPMSRuntime/resources/scripts/: InitConfig.lua  Sample.lua  Test.lua
modules/HPMSRuntime/resources/scripts/inst/: GameConst.lua
modules/HPMSRuntime/src/: HPMSRuntimeMain.cpp
modules/HPMSRuntime/src/logic/interaction/: HPMSCollisor.cpp
modules/HPMSRuntime/src/states/: HPMSGameState.cpp  HPMSLuaLogic.cpp
modules/HPMSRuntime/src/vm/: HPMSLuaVM.cpp
modules/Main/: CMakeLists.txt
modules/Main/Api/: CMakeLists.txt
modules/Main/Api/include/api/: HPMSActorAdapter.h  HPMSAnimationAdapter.h  HPMSBackgroundImageAdapter.h  HPMSCameraAdapter.h  HPMSCollisionAdapter.h  HPMSEntityAdapter.h  HPMSLightAdapter.h  HPMSNativeAdapter.h  HPMSOverlayImageAdapter.h  HPMSOverlayTextAreaAdapter.h  HPMSParticleAdapter.h  HPMSSceneNodeAdapter.h  HPMSScriptAdapter.h  HPMSSupplierAdapter.h  HPMSWalkmapAdapter.h
modules/Main/Api/include/common/: HPMSCoordSystem.h  HPMSDefs.h  HPMSLibsUtils.h  HPMSMathUtils.h  HPMSNames.h  HPMSObject.h  HPMSSerializationUtils.h  HPMSUtils.h
modules/Main/Api/src/common/: HPMSLibsUtils.cpp  HPMSMathUtils.cpp  HPMSUtils.cpp
modules/Main/BackendImpl/: CMakeLists.txt  CMakeLists.txt.sdk  IMPORTANT.txt
modules/Main/BackendImpl/include/core/: HPMSAdapteeCommon.h  HPMSAnimationAdaptee.h  HPMSAttachableItem.h  HPMSBackgroundImageAdaptee.h  HPMSBoundingCircleAdapter.h  HPMSCameraAdaptee.h  HPMSCollisionAdaptee.h  HPMSEntityAdaptee.h  HPMSEntityHelper.h  HPMSLightAdaptee.h  HPMSMaterialHelper.h  HPMSNativeAdaptee.h  HPMSOgreContext.h  HPMSOverlayImageAdaptee.h  HPMSOverlayTextAreaAdaptee.h  HPMSParticleAdaptee.h  HPMSRenderToTexture.h  HPMSSceneNodeAdaptee.h  HPMSScriptAdaptee.h  HPMSSupplierAdaptee.h  HPMSWalkmapAdaptee.h
modules/Main/BackendImpl/include/facade/: HPMSEngineFacade.h
modules/Main/BackendImpl/include/input/: HPMSInputHandler.h
modules/Main/BackendImpl/include/resource/: HPMSWalkmap.h
modules/Main/BackendImpl/include/utils/: HPMSCalcUtils.h  HPMSImplUtils.h  HPMSSectorUtils.h
modules/Main/BackendImpl/src/core/: HPMSAnimationAdaptee.cpp  HPMSBackgroundImageAdaptee.cpp  HPMSCameraAdaptee.cpp  HPMSCollisionAdaptee.cpp  HPMSEntityAdaptee.cpp  HPMSLightAdaptee.cpp  HPMSNativeAdaptee.cpp  HPMSOgreContext.cpp  HPMSOverlayImageAdaptee.cpp  HPMSOverlayTextAreaAdaptee.cpp  HPMSParticleAdaptee.cpp  HPMSRenderToTexture.cpp  HPMSSceneNodeAdaptee.cpp  HPMSScriptAdaptee.cpp  HPMSSimulatorAdaptee.cpp  HPMSSupplierAdaptee.cpp  HPMSTextBoxHelper.cpp  HPMSWalkmapAdaptee.cpp
modules/Main/BackendImpl/src/facade/: HPMSEngineFacade.cpp
modules/Main/BackendImpl/src/input/: HPMSInputHandler.cpp
modules/Main/BackendImpl/src/resource/: HPMSWalkmap.cpp  HPMSWalkmapManager.cpp
modules/Main/BackendImpl/src/utils/: HPMSCalcUtils.cpp  HPMSSectorUtils.cpp
modules/Main/Runtime/: CMakeLists.txt
modules/Main/Runtime/include/debug/: HPMSDebugUtils.h
modules/Main/Runtime/include/logic/: HPMSController.h
modules/Main/Runtime/include/states/: HPMSGameState.h  HPMSLuaLogic.h
modules/Main/Runtime/include/vm/: HPMSLuaExtensions.h  HPMSLuaRegister.h  HPMSLuaVM.h
modules/Main/Runtime/resources/fonts/: Alagard.fontdef  AlagardBak.fontdef  AlagardBig.fontdef  BlueHighway.fontdef  Broadway.fontdef  Cardinal.fontdef  DayRoman.fontdef  Fragmentcore.fontdef  Tamzen.fontdef  TimesBd.fontdef  Typewriter.fontdef  Verve.fontdef
modules/Main/Runtime/resources/masks/: DummyMask.mesh  DummyMask_old.mesh  HomeDepth.mesh
modules/Main/Runtime/resources/models/: Ammo.material  CipoN.mesh  DM_Room.mesh  Door.material  Door.mesh  Dummy.material  DummyAnim.mesh  DummyAnim.skeleton  DummyChest.mesh  Dummy_2.material  EY_DummyAnim.material  EY_DummySword.mesh  Inventory_Weapons_3D.material  MAG_AP.mesh  Revolver.mesh  Revolver.skeleton
modules/Main/Runtime/resources/scripts/: CQ_Basement.lua  CQ_Catched.lua  CQ_Home.lua  CQ_Intro.lua  CQ_Menu.lua  CQ_Quest_1.lua  CQ_Quest_2.lua  CQ_Utils.lua  Framework.lua  Init.lua  Test.lua  Test_2.lua
modules/Main/Runtime/resources/walkmaps/: Basement.walkmap  Dummy_Map.walkmap  Dummy_Scene.walkmap  Home.walkmap  TestMap.walkmap  Walkmap2.walkmap
modules/Main/Runtime/resources_bak/fonts/: BlueHighway.fontdef  Tamzen.fontdef  Typewriter.fontdef
modules/Main/Runtime/src/: HPMSRuntimeMain.cpp  HPMSTestMain.cpp
modules/Main/Tests/: CMakeLists.txt
modules/Main/Tests/src/: HPMSTestLibraries.cpp
(+340 files in other folders)
